@@ -1,5 +1,11 @@
 2006-01-03  Sam Steingold  <sds@gnu.org>
 
+	* misc.d (clisp_setenv) [WIN32_NATIVE]: use setenv_via_environ()
+	when value is "" because putenv("NAME=") unsets NAME instead of
+	setting it to ""
+
+2006-01-03  Sam Steingold  <sds@gnu.org>
+
 	* spvw_language.d (init_language): pass NULL as the second
 	argument to clisp_setenv() to unset a variable
 
